workspace-sf/force-app/main/default/objects/public_log__x/public_log__x.object-meta.xml
<CustomObject>
    <description>public$log</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$log</externalName>
    <label>public$log</label>
    <pluralLabel>public$log</pluralLabel>
</CustomObject>