workspace-sf/force-app/main/default/objects/public_log__x/fields/codigointegracao__c.field-meta.xml
<CustomField>
    <fullName>codigointegracao__c</fullName>
    <description>codigointegracao</description>
    <externalDeveloperName>codigointegracao</externalDeveloperName>
    <label>codigointegracao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>