workspace-sf/force-app/main/default/objects/public_log__x/fields/descricaoerro__c.field-meta.xml
<CustomField>
    <fullName>descricaoerro__c</fullName>
    <description>descricaoerro</description>
    <externalDeveloperName>descricaoerro</externalDeveloperName>
    <label>descricaoerro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>